src/pages/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --foreground-rgb: 0, 0, 0;
  --background-start-rgb: 214, 219, 220;
  --background-end-rgb: 255, 255, 255;
}

@media (prefers-color-scheme: dark) {
  :root {
    --foreground-rgb: 255, 255, 255;
    --background-start-rgb: 0, 0, 0;
    --background-end-rgb: 0, 0, 0;
  }
}

body.light-mode {
    background-image: none;
 /*url(https://unsplash.com/photos/17_NbEXmW8s/download?ixid=M3wxMjA3fDB8MXx0b3BpY3x8Ym84alFLVGFFMFl8fHx8fDJ8fDE3MDcyMjY3MDN8&force=true);*/
}
body, html {
  color: rgb(var(--foreground-rgb));
  /* credit: https://unsplash.com/@flyd2069 https://unsplash.com/photos/green-and-blue-abstract-painting-zkIXgYpiHq8 */
  background-image: url(/ron-whitaker.jpg);
  background-image: url(/purple-back.png);
  
  background-color: #111010 !important;
  background-color: #575757 !important;
  background-color: #323030 !important;
  background-color: #1b1d1f !important;
  background-size: cover;
  overflow: hidden;
  /*
  background: linear-gradient(
      to bottom,
      transparent,
      rgb(var(--background-end-rgb))
    )
    rgb(var(--background-start-rgb));
*/
}

@import '@radix-ui/colors/black-alpha.css';
@import '@radix-ui/colors/mauve.css';
@import '@radix-ui/colors/violet.css';

.ContextMenuContent,
.ContextMenuSubContent {
  min-width: 220px;
  background-color: white;
  border-radius: 6px;
  overflow: hidden;
  padding: 5px;
  box-shadow: 0px 10px 38px -10px rgba(22, 23, 24, 0.35), 0px 10px 20px -15px rgba(22, 23, 24, 0.2);
}

.ContextMenuItem,
.ContextMenuCheckboxItem,
.ContextMenuRadioItem,
.ContextMenuSubTrigger {
  font-size: 13px;
  line-height: 1;
  color: black;
  border-radius: 3px;
  display: flex;
  align-items: center;
  height: 25px;
  padding: 0 5px;
  position: relative;
  padding-left: 25px;
  user-select: none;
  outline: none;
}
.ContextMenuSubTrigger[data-state='open'] {
  background-color: white;
  color: black;
}
.ContextMenuItem[data-disabled],
.ContextMenuCheckboxItem[data-disabled],
.ContextMenuRadioItem[data-disabled],
.ContextMenuSubTrigger[data-disabled] {
  color: var(--mauve-8);
  pointer-events: 'none';
}
.ContextMenuItem[data-highlighted],
.ContextMenuCheckboxItem[data-highlighted],
.ContextMenuRadioItem[data-highlighted],
.ContextMenuSubTrigger[data-highlighted] {
  background-color: black;
  color: white;
}

.ContextMenuLabel {
  padding-left: 25px;
  font-size: 12px;
  line-height: 25px;
  color: black;
}

.ContextMenuSeparator {
  height: 1px;
  background-color: var(--violet-6);
  margin: 5px;
}

.ContextMenuItemIndicator {
  position: absolute;
  left: 0;
  width: 25px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
}

.RightSlot {
  margin-left: auto;
  padding-left: 20px;
  color: var(--mauve-11);
}
[data-highlighted] > .RightSlot {
  color: white;
}
[data-disabled] .RightSlot {
  color: var(--mauve-8);
}


::-webkit-scrollbar-track {
    background: transparent; /* track color */
}

::-webkit-scrollbar-thumb {
    background: #414141; /* handle color */
    border-radius: 8px;
    height: 8px;
}

::-webkit-scrollbar-thumb:hover {
}

::-webkit-scrollbar {
    width: 4px;
    height: 4px;
    display: block;
} 

.patches {
  row-gap: 7px;
  column-gap: 7px;
  //grid-template-columns: 1fr 1fr; /* Start with 2 columns */
  grid-template-rows: auto;
  margin: 15px;
  margin-top: 35px;
}

.tile {
    //margin-top: 15px;
}

/*
.tile:first-child {
  grid-column: 1 / 2;
  grid-row: 1 / 3;
}

.tile:nth-child(2) {
  grid-column: 2 / 3;
  grid-row: 1 / 2;
}

.patches-2 {
    .tile:nth-child(2) {
        grid-column: 2 / 3;
        grid-row: 1 / 3;
}
}

.tile:nth-child(3) {
  grid-column: 2 / 3;
  grid-row: 2 / 3;
}

.patches-5  {
    .tile:nth-child(4) {
        grid-column: 3 / 3;
        grid-row: 1 / 2;
    }
    .tile:nth-child(5) {
        grid-column: 3 / 3;
        grid-row: 2 / 2;
    }

}
.tile:nth-child(4) {
        grid-row: 1 / 3;
}
*/


div[data-radix-popper-content-wrapper] {
    div,span {
    }
}



.bg-black-blur {
    background-color: #000000cf;
    //backdrop-filter: blur(2px);
}

.bg-black-clear2 {
    background-color: #59595930;
    //backdrop-filter: blur(2px);
}

.bg-black-clear {
    //background-color: #bbb1b140;
    background-color: #e0e0e038;
}

.bg-black-clear-light {
    background-color: #ffffff52;
    backdrop-filter: blur(2px);
}

.bg-black-blur-light {
    background-color: #ffffff52;
    backdrop-filter: blur(8px);
}

.DialogOverlay, .DialogContent {
    width: 200px;
    height: 200px;
    background-color: white;
    color: black;
    position: fixed;
    z-index: 100000;
}

.center-fixed {
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    top: 0;
    display: table;
    margin-left: auto;
    margin-right: auto;
    margin-top: auto;
    margin-bottom: auto;
}


.object-context {
    background-color: #00000094;
    border: 1px solid #ffffff2b;
    backdrop-filter: blur(8px);
    z-index: 1000000000000000;
}

textarea {
  width: 100%;
  resize: none;

  box-sizing: border-box; /* Include padding and border in the element's total width */
}

